CMBSandbox4/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <inlineHelpText>This will be used for the related transactions link on page</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <inlineHelpText>This is to adjust the price of the invoice. ( &quot;+&quot; or &quot;-&quot; )</inlineHelpText>
        <label>Adjustment - Amt$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustments__c</fullName>
        <label>Adjustment - Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Flag__c</fullName>
        <formula>IF(  
CONTAINS(text(Status__c) , &quot;Sent&quot;),
CASE(1, 
IF(AND(Days_Since_Sent__c &gt;=0.5,Days_Since_Sent__c &lt;=29),1,0),IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot; ),
IF(Days_Since_Sent__c &gt;=30,1,0), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;)
,&quot;N/A&quot;),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Add_l_Hours_When_Paid_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Add&apos;l Hours When Paid/Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <formula>Price_Conga__c  -   Invoice_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due2 (To be removed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_to_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will be marked by Henry Abenaim once reviewed and approved</inlineHelpText>
        <label>Approved to Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_CC_Email__c</fullName>
        <inlineHelpText>This will be the email address of the person at the client that should be CCd on Invoices</inlineHelpText>
        <label>Billing Contact CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <formula>Billing_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Billing Contact Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>0016000000mYNSF</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Contact_CC_On_Invoices__c</fullName>
        <formula>Opportunity__r.Client_Contact_CC_On_Invoices__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Contact - CC On Invoices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_Debug__c</fullName>
        <formula>HYPERLINK(&quot;https://workflow.appextremes.com/apps/Conga/PointMerge.aspx?SessionId=&quot; 
&amp; $Api.Session_ID 
&amp; &quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_80 
&amp; Conga_Conductor_Final_Attach_Email__c , &quot;Test Conga Workflow URL via UI&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor Debug</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_Final_Attach_Email__c</fullName>
        <description>This will be to attache and email.
Here is how to disabble conga &quot;&amp;DC=&quot; + IF(Ready_to_be_Emailed__c = True,&quot;0&quot;,&quot;1&quot;)+</description>
        <formula>&quot;&amp;id=&quot; +Id+
&quot;&amp;templateid=a0E6000000CUIfD&quot;+
&quot;&amp;queryID=[GroupTime]a1560000000Bj5w,[GroupTask]a1560000004IL0h,[GroupProject]a1560000004IL0c,[CreditLines]a1560000004IR9D&quot;+
&quot;&amp;reportid=[AcctData]00O60000003DMTK?pv0=&quot;+ Account__r.Id +&quot;,[LineItem]00O60000003DMZD?pv0=&quot;+  Id +
&quot;&amp;defaultpdf=1&quot;+
&quot;&amp;ofn=Invoice+&quot;+ Name + &quot;+-+&quot; +  Account__r.Name + &quot;+-+&quot; + TEXT(TODAY()) +
&quot;&amp;lg4=1&quot; +
&quot;&amp;lg3=2&quot; +
&quot;&amp;mfts0=Status__c&quot; +
&quot;&amp;mftsvalue0=Sent&quot; +
&quot;&amp;mfts1=Date_Sent__c&quot; +
&quot;&amp;mftsvalue1=Today&quot; +
&quot;&amp;emailtoid=&quot; + Billing_Contact__r.Id +
&quot;&amp;emailcc=henry@cloudmybiz.com,&quot;+Billing_Contact_CC_Email__c +
&quot;&amp;emailtemplateid=00X60000003HPe7&quot; +
&quot;&amp;emailrelatedtoid=&quot; + Id +
&quot;&amp;emailfromid=0D2320000008Pft&quot; +

&quot;&amp;qmode=3&quot; +
&quot;&amp;ds7=12&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga - Final/Attach/Email/UpdateField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Final__c</fullName>
        <formula>&quot;&amp;id=&quot; +Id+
&quot;&amp;Templateid=Invoice__c.Conga_Template_ID__c&quot;+
&quot;&amp;queryID=[GroupTime]a1560000000Bj5w,[GroupTask]a1560000004IL0h,[GroupProject]a1560000004IL0c,[CreditLines]a1560000004IR9D&quot;+
&quot;&amp;reportid=[AcctData]00O60000003DMTK?pv0=&quot;+ Account__r.Id +&quot;,[LineItem]00O60000003DMZD?pv0=&quot;+  Id +
&quot;&amp;defaultpdf=1&quot;+
&quot;&amp;ofn={Template.Label}+Invoice__c.Name+-+Invoice__c.Account__c+-+Today&quot; +
&quot;&amp;lg4=1&quot; +
&quot;&amp;lg3=2&quot; +
&quot;&amp;mfts0=Status__c&quot; +
&quot;&amp;mftsvalue0=Sent&quot; +
&quot;&amp;mfts1=Date_Sent__c&quot; +
&quot;&amp;mftsvalue1=Today&quot; +
&quot;&amp;emailtoid=&quot; + Billing_Contact__r.Id +
&quot;&amp;emailcc=henry@cloudmybiz.com,&quot;+Billing_Contact_CC_Email__c +
&quot;&amp;emailtemplateid=00X60000003HPe7&quot; +
&quot;&amp;emailrelatedtoid=&quot; + Id +
&quot;&amp;emailfromid=0D2320000008Pft&quot; +

&quot;&amp;qmode=3&quot; +
&quot;&amp;ds7=12&quot; +
&quot;&amp;zipfiles=0&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga - Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Invoice_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; +Id+
&quot;&amp;templateid=a0E6000000CUIfD&quot;+
&quot;&amp;queryID=[GroupTime]a1560000000Bj5w,[GroupTask]a1560000004IL0h,[GroupProject]a1560000004IL0c,[CreditLines]a1560000004IR9D&quot;+
&quot;&amp;reportid=[AcctData]00O60000003DMTK?pv0=&quot;+ Account__r.Id +&quot;,[LineItem]00O60000003DMZD?pv0=&quot;+  Id +
&quot;&amp;defaultpdf=1&quot;+
&quot;&amp;ofn=Invoice+&quot;+ Name + &quot;+-+&quot; +  Account__r.Name + &quot;+-+&quot; + TEXT(TODAY()) +
&quot;&amp;qmode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Invoice URL - Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Invoice_URL_with_Attachments__c</fullName>
        <formula>&quot;&amp;id=&quot; +Id+
&quot;&amp;templateid=a0E6000000CUIfD&quot;+
&quot;&amp;queryID=[GroupTime]a1560000000Bj5w,[GroupTask]a1560000004IL0h,[GroupProject]a1560000004IL0c,[CreditLines]a1560000004IR9D&quot;+
&quot;&amp;reportid=[AcctData]00O60000003DMTK?pv0=&quot;+ Account__r.Id +&quot;,[LineItem]00O60000003DMZD?pv0=&quot;+  Id +
&quot;&amp;defaultpdf=1&quot;+
&quot;&amp;ofn=Invoice+&quot;+ Name + &quot;+-+&quot; +  Account__r.Name + &quot;+-+&quot; + TEXT(TODAY()) +
&quot;&amp;lg4=1&quot; +
&quot;&amp;lg3=2&quot; +
&quot;&amp;qmode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Invoice URL - with Attachments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Template_ID__c</fullName>
        <formula>&quot;a0E6000000CUIfD&quot; &amp;&quot;,&quot;&amp; &quot;a0E6000000DZfh0&quot;</formula>
        <inlineHelpText>This will be used for the conga syntax</inlineHelpText>
        <label>Conga Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Billing_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact - First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Hours__c *  Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Hours_2__c</fullName>
        <formula>IF(NOT(ISBLANK(Credit_Hours__c)),Credit_Hours__c,null)</formula>
        <inlineHelpText>This summarizes the line items that are of negative value. Credits to be listed on the invoice after the subtotal.</inlineHelpText>
        <label>Credit Hours (#)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Hours__c</fullName>
        <inlineHelpText>This summarizes the line items that are of negative value. Credits to be listed on the invoice after the subtotal.</inlineHelpText>
        <label>Credit Hours (#)</label>
        <summarizedField>Line_Item__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.isCredit_Checkbox__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Hours_isCredit_Dollar__c</fullName>
        <formula>IF(NOT(ISBLANK(Credit_Hours__c)),Credit_Hours__c *  Rate__c,null)</formula>
        <inlineHelpText>Credit_Hours__c *  Rate__c</inlineHelpText>
        <label>Credit Hours ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Followed_Up__c</fullName>
        <label>Date Followed Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <formula>IF(Days_Since_Sent__c -

CASE( Terms__c, 
&quot;Net 15&quot;,15,
&quot;Net 30&quot;,30,
&quot;Net 45&quot;,45,
&quot;Due on Receipt&quot;,0,
30)&lt;1,

0,

Days_Since_Sent__c -

CASE( Terms__c, 
&quot;Net 15&quot;,15,
&quot;Net 30&quot;,30,
&quot;Net 45&quot;,45,
&quot;Due on Receipt&quot;,0,
30)
)</formula>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Created__c</fullName>
        <formula>today() -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Followed_Up__c</fullName>
        <formula>If( NOT(ISBLANK(Date_Followed_Up__c)),today() - Date_Followed_Up__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Followed Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Sent__c</fullName>
        <formula>today()-  Date_Sent__c</formula>
        <label>Days Since Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>Today() - Status_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Hours__c</fullName>
        <inlineHelpText>Credits that come from deposits paid</inlineHelpText>
        <label>Deposit Hours</label>
        <summarizedField>Line_Item__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.isDeposit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deposit_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_On_Invoice__c</fullName>
        <inlineHelpText>This will be displayed on the invoice</inlineHelpText>
        <label>Description (On Invoice)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description (Internal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Formula__c</fullName>
        <formula>IF( Due_Date__c &lt; TODAY(),TODAY(),Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date (Formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Date_Sent__c + CASE( Terms__c,
&quot;Net 15&quot;,15,
&quot;Net 30&quot;,30,
&quot;Net 45&quot;,45,
&quot;Due on Receipt&quot;,0,
0)</formula>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date1__c</fullName>
        <formula>IF(
ISBLANK(End_Date_RollUp2__c ), DATEVALUE(End_Date2__c),
IF(
ISBLANK(DATEVALUE(End_Date2__c)),End_Date_RollUp2__c,
IF(
AND(
NOT(ISBLANK(End_Date_RollUp2__c )),NOT(ISBLANK(DATEVALUE(End_Date2__c))),
End_Date_RollUp2__c &gt; DATEVALUE(End_Date2__c)),
End_Date_RollUp2__c,
DATEVALUE(End_Date2__c  )
)))</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date2__c</fullName>
        <label>End Date (Hidden)</label>
        <summarizedField>Line_Item__c.Finish__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date_RollUp2__c</fullName>
        <inlineHelpText>This will pull the latest Date field from the Line Items (Not the Finish field)</inlineHelpText>
        <label>End Date (RollUp2)</label>
        <summarizedField>Line_Item__c.Date__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Est_Fee_Minus_Contractor_Cost__c</fullName>
        <formula>Estimated_Fee_to_Client__c - Sum_of_Contractor_Fees__c</formula>
        <label>Est. Fee Minus Contractor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Fee_to_Client__c</fullName>
        <formula>( Project__r.Estimated_Hours__c *  Project__r.Hourly_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Fee to Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hrs_vs_Actual__c</fullName>
        <formula>Total_Invoice_Hours__c  - Project__r.Estimated_Hours__c</formula>
        <label>Estimated Hrs vs Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimates_Hours_on_Project__c</fullName>
        <formula>Project__r.Estimated_Hours__c</formula>
        <label>Estimates Hours on Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Sum_of_RollUp__c</fullName>
        <formula>(Hours_Roll_Up__c * Rate__c) +  Fixed_Fees_Roll_Up_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Fees_Roll_Up_c__c</fullName>
        <inlineHelpText>This is a roll up from all Fixed Fees</inlineHelpText>
        <label>Fixed Fees</label>
        <summarizedField>Line_Item__c.Fixed_Fee__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Harvest_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Harvest Projects</description>
        <label>Harvest Project</label>
        <referenceTo>HarvestProject__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Conga__c</fullName>
        <formula>IF( Hours_Roll_Up__c&gt;=0.01,Hours_Roll_Up__c, Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours (Conga)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Credited__c</fullName>
        <formula>IF(Sum_of_Credit_Hrs__c = null,null,(Sum_of_Credit_Hrs__c /  Sum_of_Gross_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Hours Credited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hours_Net_of_Deposits__c</fullName>
        <formula>Total_Invoice_Hours__c +  Deposit_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice Hours minus Deposit Hours</inlineHelpText>
        <label>Hours Net of Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Roll_Up__c</fullName>
        <label>Sum of Hours</label>
        <summarizedField>Line_Item__c.Hours__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours (Manual)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_History__c</fullName>
        <inlineHelpText>This will keep a copy of the internal notes</inlineHelpText>
        <label>Internal Notes History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <inlineHelpText>This is to add notes during the invoice review and approval process.</inlineHelpText>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Paid2 (To be removed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amt_when_Sent__c</fullName>
        <label>Invoice Amt when Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Conga__c</fullName>
        <formula>RIGHT(Name  , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice # (Conga)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Hrs_with_Decimals__c</fullName>
        <formula>Total_Invoice_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Hrs with Decimals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Profit_Amt__c</fullName>
        <formula>Fee_Sum_of_RollUp__c - Sum_of_Contractor_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Profit Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Profit__c</fullName>
        <formula>Invoice_Profit_Amt__c /  Price_Conga__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Profit %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Invoice_Sent_Date__c</fullName>
        <formula>IF(LastActivityDate = Date_Sent__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Invoice Sent Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_Harvest_Hours_As_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked Harvest Hours As Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Follow_Up_Date__c</fullName>
        <inlineHelpText>This is the date that you need to follow up on</inlineHelpText>
        <label>Next Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_due_Text__c</fullName>
        <formula>CASE( Terms__c,

&quot;Net 15&quot;, &quot;Payment due within 15 days of receipt&quot;,
&quot;Net 30&quot;, &quot;Payment due within 30 days of receipt&quot;,
&quot;Net 45&quot;, &quot;Payment due within 45 days of receipt&quot;,
&quot;Due on Receipt&quot;, &quot;Payment due upon receipt&quot;,

&quot;Payment due within 15 days of receipt&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the text at the bottom of the invoices</inlineHelpText>
        <label>Payment due Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Conga__c</fullName>
        <formula>IF(Fee_Sum_of_RollUp__c&gt;=0.01,Fee_Sum_of_RollUp__c+ Adjustment__c -  Sum_of_Credit__c   , Cost__c +Adjustment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Harvest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>HarvestProject__c</referenceTo>
        <relationshipLabel>Invoices1</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Email__c</fullName>
        <inlineHelpText>This will populate via workflow to update the PMs email here. For workflow email alerts</inlineHelpText>
        <label>Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Project_Harvest__r.ClientProjectManager__r.FirstName + &quot; &quot; +  Project_Harvest__r.ClientProjectManager__r.LastName</formula>
        <inlineHelpText>The Internal PM listed on the Project record</inlineHelpText>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project(1)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date1__c</fullName>
        <formula>IF( 
ISBLANK(Start_Date_RollUp2__c ), DATEVALUE(Start_Date2__c), 
IF( 
ISBLANK(DATEVALUE(Start_Date2__c)),Start_Date_RollUp2__c , 
IF( 
AND( 
NOT(ISBLANK(Start_Date_RollUp2__c )),NOT(ISBLANK(DATEVALUE(Start_Date2__c))), 
Start_Date_RollUp2__c&lt; DATEVALUE(Start_Date2__c)), 
Start_Date_RollUp2__c, 
DATEVALUE(Start_Date2__c ) 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date2__c</fullName>
        <label>Start Date (Hidden)</label>
        <summarizedField>Line_Item__c.Start__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date_RollUp2__c</fullName>
        <label>Start Date (RollUp2)</label>
        <summarizedField>Line_Item__c.Date__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <inlineHelpText>Updates with the date each time the status changes</inlineHelpText>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - PM Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - HA Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Pending Credit &amp; Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Pending Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Approved &amp; Ready to Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent - Partially Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Fee_Sum_of_RollUp__c  +   ABS(( Credit_Hours__c  *  Rate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the subtotal on the invoice before adjustments</inlineHelpText>
        <label>Subtotal ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Contractor_Fees__c</fullName>
        <label>Sum of Contractor Fees</label>
        <summarizedField>Line_Item__c.Cnt_Fee__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Contractor_Hours__c</fullName>
        <label>Sum of Contractor Hours</label>
        <summarizedField>Line_Item__c.Contractor_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Cnt_Fee__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Credit_Hrs__c</fullName>
        <label>Sum of Credit Hrs</label>
        <summarizedField>Line_Item__c.Credit_Hrs__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Credit__c</fullName>
        <description>This is a new filed built to factor in the credits</description>
        <label>Sum of Credit ($)</label>
        <summarizedField>Line_Item__c.Credit__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Gross_Hours__c</fullName>
        <label>Sum of Gross Hours</label>
        <summarizedField>Line_Item__c.Hours_Num__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <defaultValue>&apos;Net 15&apos;</defaultValue>
        <label>Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Due__c</fullName>
        <formula>Price_Conga__c -  Total_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>